@@ -43,5 +43,5 @@ rm -rf %{buildroot}
 %attr(644,root,root) /usr/share/man/man[58]/*
 
 %changelog
-* Fri Jun 24 2005 Brendan O'Dea <bod@optus.net> 2.1.2-1
+* Mon Jun 27 2005 Brendan O'Dea <bod@optus.net> 2.1.2-1
 - 2.1.2 release, see /usr/share/doc/l2tpns-2.1.2/Changes
